--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,13 +1,13 @@
 body {
-    font-family: sans-serif;
-    background-color: #f4f4f9;
+    font-family: 'Inter', sans-serif;
+    background-color: #121212;
     display: flex;
     justify-content: center; /* Центрируем всё по горизонтали */
     padding-top: 50px;
 }
 
 .container {
-    background: white;
+    background: #f4f7f6;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 4px 10px rgba(0,0,0,0.1); /* Легкая тень */
